cmake_minimum_required(VERSION 3.22.0)

project(Triangle_Quadrangle)
add_executable(Different_figures main.cpp equilateral_triangle.cpp figure.cpp isosceles_triangle.cpp parallelogram.cpp quadrangle.cpp quadrilateral.cpp rectangle.cpp rhombus.cpp right_triangle.cpp square.cpp triangle.cpp WrongFigure.cpp WrongFigure2.cpp)